--- a/api/package.json
+++ b/api/package.json
@@ -1,26 +1,32 @@
 {
-  "name": "Cars_api",
+  "name": "Cars_APIREST",
   "version": "0.8.0",
   "private": true,
   "main": "app.js",
   "scripts": {
     "start": "nodemon app",
-    
+    "test": "mocha || true",
+    "test-integration": "mocha --opts test/integration/mocha.opts test/integration/*.js"
   },
   "description": "Cars_api",
   "author": {
-    "name": "Diego"
+    "name": "Diego Araujo"
+  },
+  "devDependencies": {
+    "chai": "4.2.0",
+    "chai-http": "4.3.0",
+    "mocha": "^8.3.2",
+    "nodemon": "^2.0.7",
+    "sequelize-cli": "^5.5.1",
+    "swagger-ui-express": "^4.1.6"
   },
   "dependencies": {
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.0",
     "express": "^4.14.0",
-    "mocha": "^8.3.2",
     "morgan": "^1.7.0",
-    "nodemon": "^2.0.7",
     "sequelize": "^5.21.3",
-    "sequelize-cli": "^5.5.1",
     "serve-favicon": "^2.3.0",
-    "sqlite3": "5.0.2",
-    }
+    "sqlite3": "5.0.2"
+  }
 }
