--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
     "morgan": "^1.7.0",
     "sequelize": "^5.21.3",
     "serve-favicon": "^2.3.0",
-    "sqlite3": "5.0.2"
+    "sqlite3": "5.0.2",
+    "supertest": "^6.1.3"
   }
 }
